/***********************************************************************
* Copyright (c) 2013-2017 Commonwealth Computer Research, Inc.
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Apache License, Version 2.0
* which accompanies this distribution and is available at
* http://www.opensource.org/licenses/apache2.0.php.
 ***********************************************************************/

// Execute : protoc --java_out=./geomesa-hbase/geomesa-hbase-datastore/src/main/java ./geomesa-hbase/geomesa-hbase-datastore/src/main/protobuf/GeoMesaProtoGenerator.proto

option java_package = "org.locationtech.geomesa.hbase.proto";
option java_outer_classname = "GeoMesaProto";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message GeoMesaCoprocessorRequest {
    required bytes options = 1;
}

message GeoMesaCoprocessorResponse {
    repeated bytes payload = 1;
}

service GeoMesaCoprocessorService {
  rpc getResult(GeoMesaCoprocessorRequest)
    returns (GeoMesaCoprocessorResponse);
}
